--- a/src/Modules/Navbar/Navbar.module.css
+++ b/src/Modules/Navbar/Navbar.module.css
@@ -1,10 +1,9 @@
 .headerMenu {
     justify-content: space-between;
     display: flex;
-    color: red;
 }
 
-.home {
+.homeTitle {
 font-family: 'Quicksand';
 margin-right: 20px;
 font-style: normal;
@@ -12,6 +11,21 @@ font-weight: 700;
 font-size: 48px;
 line-height: 60px;
 color: #FFFFFF;
+}
+
+.homeTitle:hover {
+    color: #fd8c03;
+    border-bottom: 4px double #fd8c03;
+}
+
+.homeTitle.active {
+    color: white;
+    border-bottom: 4px double white;
+}
+
+.homeTitle.active:hover {
+    color: #fd8c03;
+    border-bottom: 4px double #fd8c03;
 }
 
 
